update prac/formal instruction content

--- a/src/templates/task_c4.html
+++ b/src/templates/task_c4.html
@@ -18,7 +18,7 @@
       <div id="c4" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>4. How much have you gained on the big topic of health?</b></p>
+          <p><b>4. How much did you learn overall from the articles?</b></p>
           <br><br>
           <form id="form_c4" name="form_c4" action="{{ action_url }}" method="POST" onsubmit="return saveAns();">
             <table style="width:100%;">
