--- a/src/templates/instruction.html
+++ b/src/templates/instruction.html
@@ -59,11 +59,11 @@
         </p>
     
         <p style='line-height:130%'>
-            Your task is to learn about some topics in medical science related to Donation and Medical Transplants. There are three main topics, and your goal is to learn as much as you can about them. You will have 15 minutes to learn about Donation and Medical Transplants before I ask you to answer some questions. <b>It is very important for you to pay attention to the articles and do your best to learn about the topics.</b> You will receive bonus money based on your performance.
+            Your task is to learn about some topics related health. There are five main topics, and your goal is to learn as much as you can about them. You will have 15 minutes to learn about these health topics before I ask you to answer some questions. <b>It is very important for you to pay attention to the articles and do your best to learn about the topics.</b> You will receive bonus money based on your performance.
         </p>
     
         <p style='line-height:130%'>
-            During the learning phase, you will select one topic at a time and read a collection of articles about it. You can read each article at your own pace. After you read each article, you have a choice. You can either continue reading about this topic by pressing the “Read Next article” button OR you can switch to a new topic. You only have 15 minutes to learn about Donations and Medical Transplants, so do your best to <b>concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are ,<b>either too hard or not helping you to learn anything new, you might want to decide to switch to a new topic</b>. This is your choice.
+            During the learning phase, you will select one topic at a time and read a collection of articles about it. You can read each article at your own pace. After you read each article, you have a choice. You can either continue reading about this topic by pressing the “Read Next article” button OR you can switch to a new topic. You only have 15 minutes to learn about health, so do your best to <b>concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are ,<b>either too hard or not helping you to learn anything new, you might want to decide to switch to a new topic</b>. This is your choice.
         </p>
     
         <p style='line-height:130%'>
@@ -156,7 +156,7 @@
 
                 <tr>
                   <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-                      <b><br>4. "How much have you gained on the big topic of health?"</b>
+                      <b><br>4. "How much did you learn overall from the articles?"</b>
                   </td>
               </tr>
               <tr>
@@ -187,7 +187,7 @@
             Again, after reading each article, you can decide to keep reading about this topic by moving to the next article, or to go back to the main page to choose another topic. Once you decide to leave a topic, you will not be able to return.
         </p>
         <p style='line-height:130%'>
-            The goal is to learn as much about Donations and Medical Transplants as possible instead of memorizing the passages word for word. You will need to do your best to <b>optimize your learning outcome</b>.
+            The goal is to learn as much about health as possible instead of memorizing the passages word for word. You will need to do your best to <b>optimize your learning outcome</b>.
         </p>
         <p style='line-height:130%'>
             You will be asked to what you have learned at the end of the task. Your performance will be awarded based on the number of facts you learned. Please try your best to learn as much information about “Donation and Medical Transplantation” in 15 minutes (not including rating time).
