--- a/src/templates/practice/prac_instruction.html
+++ b/src/templates/practice/prac_instruction.html
@@ -57,13 +57,13 @@
   <div class='cl2'>
     <h2><b>Instructions</b></h2>
     <p style='line-height:130%'>
-    In this study, your task is to learn about some topics in medical science related to Donation and Medical Transplants. There are three main topics, and your goal is to learn as much as you can about them. You will have 15 minutes to learn about Donation and Medical Transplants before I ask you to answer some questions. <b>It is very important for you to pay attention to the articles and do your best to learn about the topics. </b>You will receive bonus money based on your performance.
+    In this study, your task is to learn about some topics in medical science related to animals. There are three main topics, and your goal is to learn as much as you can about them. You will have 4 minutes to learn about animals before I ask you to answer some questions. <b>It is very important for you to pay attention to the articles and do your best to learn about the topics. </b>You will receive bonus money based on your performance.
     </p>
     <p style='line-height:130%'>
-    During the learning phase, you will select one topic at a time and read a collection of articles about it. You can read each article at your own pace. After you read each article, you have a choice. You can either continue reading about this topic by pressing the “Read Next article” button OR you can switch to a new topic. You only have 15 minutes to learn about Donations and Medical Transplants, so do your best to <b>concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are <b>either too hard or not helping you to learn anything new, you might want to decide to switch to a new topic</b>.  This is your choice. 
+    During the learning phase, you will select one topic at a time and read a collection of articles about it. You can read each article at your own pace. After you read each article, you have a choice. You can either continue reading about this topic by pressing the “Read Next article” button OR you can switch to a new topic. You only have 4 minutes to learn about Donations and Medical Transplants, so do your best to <b>concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are <b>either too hard or not helping you to learn anything new, you might want to decide to switch to a new topic</b>.  This is your choice. 
     </p>
     <p style='line-height:130%'>
-    Note that there are more articles than you can completely read within 15 minutes so you should make your decisions about <b>whether to continue or stop reading carefully </b>so that you can learn as much information as possible about Donation and Medical Transplant. 
+    Note that there are more articles than you can completely read within 4 minutes so you should make your decisions about <b>whether to continue or stop reading carefully </b>so that you can learn as much information as possible about animals. 
     </p>
     <p style='line-height:130%'>
     After reading each article within a topic, you will be asked to rate how easy the text was, how much new information you thought was in the article, AND how much you learned.  You will be asked to make these ratings on a scale from 0 to 100 by moving the circle: 
@@ -75,7 +75,7 @@
     <!-- quesation 1-->
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b>1. "How easy was this article to read?"</b>
+      <b>1. How easy was this article to read?</b>
       </td>
     </tr>
     <tr>
@@ -101,10 +101,10 @@
     </tr>
 
 
-    <!-- 问题 2--> 
+    <!-- question 2--> 
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b><br>2. "Including the other articles that you have read today, how much new information was in this article?"</b>
+      <b><br>2. Including the other articles that you have read today, how much new information was in this article?</b>
       </td>
     </tr>
     <tr>
@@ -127,11 +127,10 @@
       </td>
     </tr>
 
-
-
+    <!-- question 3-->
     <tr>
       <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-      <b><br>3. "How much did you learn from this particular article?"</b>
+      <b><br>3. How much did you learn from this particular article?</b>
       </td>
     </tr>
     <tr>
@@ -154,13 +153,38 @@
       </td>
     </tr>
 
+    <!-- question 4-->
+    <tr>
+      <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+      <b><br>4. How much did you learn overall from the articles?</b>
+      </td>
+    </tr>
+    <tr>
+      <td style='text-align:center;'>
+        <form id='form_c4' name='form_c4'>
+           <table style="width: 100%;">
+             <tr>
+               <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
+            </tr>
+             <tr>
+               <td style='font-size:13pt; color:#0B3861; text-align:left;'><b>0</b></td>
+               <td style='font-size:13pt; color:#0B3861; text-align:right;'><b>100</b></td>
+             </tr>
+             <tr>
+               <td style='font-size:13pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+               <td style='font-size:13pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+             </tr>
+           </table>
+        </form>
+      </td>
+    </tr>
     
     </table>
     </div>
 
     <p style='line-height:130%'>Again, after reading each article, you can decide to keep reading about this topic by moving to the next article, or to go back to the main page to choose another topic. Once you decide to leave a topic, you will not be able to return.</p>
-    <p style='line-height:130%'>The goal is to learn as much about Donations and Medical Transplants as possible instead of memorizing the passages word for word. You will need to do your best to <b>optimize your learning outcome</b>.</p>
-    <p style='line-height:130%'>You will be asked to what you have learned at the end of the task. Your performance will be awarded based on the number of facts you learned. Please try your best to learn as much information about “Donation and Medical Transplantation” in 15 minutes.</p>
+    <p style='line-height:130%'>The goal is to learn as much about animals as possible instead of memorizing the passages word for word. You will need to do your best to <b>optimize your learning outcome</b>.</p>
+    <p style='line-height:130%'>You will be asked to what you have learned at the end of the task. Your performance will be awarded based on the number of facts you learned. Please try your best to learn as much information about “animals” in 4 minutes.</p>
     <p style='line-height:130%'>First, you will do a practice round, in which your task is to learn about animals in 4 minutes. Please learn as many facts about animals as you can.</p>
     </div>
 
