--- a/src/templates/done.html
+++ b/src/templates/done.html
@@ -47,7 +47,7 @@
     </p>
 
     <p>
-      Thanks for participating in our study.
+      Thank you for participating in our study.
     </p>
   </div>
 </body>
