updated questions.hmtl layout

--- a/src/templates/instruction.html
+++ b/src/templates/instruction.html
@@ -78,7 +78,7 @@
             <table>
                 <tr>
                     <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-                        <b>1. "How easy was this article to read?"</b>
+                        <b>1. How easy was this article to read?</b>
                     </td>
                 </tr>
                 <tr>
@@ -102,7 +102,7 @@
                 </tr>
                 <tr>
                     <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-                        <b><br>2. "Including the other articles that you have read today, how much new information was in this article?"</b>
+                        <b><br>2. Including the other articles that you have read today, how much new information was in this article?</b>
                     </td>
                 </tr>
 
@@ -130,7 +130,7 @@
 
                 <tr>
                     <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-                        <b><br>3. "How much did you learn from this particular article?"</b>
+                        <b><br>3. How much did you learn from this particular article?</b>
                     </td>
                 </tr>
                 <tr>
@@ -156,7 +156,7 @@
 
                 <tr>
                   <td style='font-size:14pt; color:#0B3861; text-align:left;'>
-                      <b><br>4. "How much did you learn overall from the articles?"</b>
+                      <b><br>4. How much did you learn overall from the articles?</b>
                   </td>
               </tr>
               <tr>
