--- a/src/templates/practice/prac_b.html
+++ b/src/templates/practice/prac_b.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="nextArt" style="border: 1px solid #ccc; padding: 10px; display: flex; align-items: center; justify-content: space-between; gap: 24px;">
-      <a href="{{ url_for('practice.prac_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to other topic</a>
+      <a href="{{ url_for('practice.prac_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to other topics</a>
       {% if passOrder != 5 %}
       <a href="{{ url_for('practice.prac_c1', fid='same') }}" target="_top" style="color:#0a0000;">Continue to next article</a>
       {% endif %}
