Update practice mode answer saving and fix db null errors

--- a/src/templates/practice/prac_c4.html
+++ b/src/templates/practice/prac_c4.html
@@ -39,6 +39,7 @@
               </tr>
             </table>
             <input type="hidden" name="fid" value="{{ fid }}">
+            <input type="hidden" name="savepassid" value="{{ passID }}">
             <br>
             <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next">
             <input type="hidden" name="qid" value="c4">
