--- a/src/templates/task_b.html
+++ b/src/templates/task_b.html
@@ -60,7 +60,7 @@
     ">
       <a href="{{ url_for('core.task_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to other topics</a>
       {% if passOrder != 5 %}
-      <a href="{{ url_for('core.task_c1', fid='same') }}" target="_top" style="color:#0a0000;">Continue to next article</a>
+      <a href="{{ url_for('core.task_c1', fid='same') }}" target="_top" style="color:#0a0000;">Continue to the next article</a>
       {% endif %}
     </div>
   </div>
