Update CSS styles for task and question templates; add new styles for task_b and task_question, enhance layout and button interactions in HTML templates for improved user experience.

--- a/src/templates/let_comp_one_inst.html
+++ b/src/templates/let_comp_one_inst.html
@@ -30,8 +30,8 @@
     <form method="get" action="{{ url_for('core.let_comp_one') }}">
       <input type="hidden" name="item" value="1">
       <input type="image" name="submit" id="submit"
-             src="{{ url_for('static', filename='images/nextpage_button.gif') }}"
-             alt="Next">
+             src="{{ url_for('static', filename='images/view.gif') }}"
+             alt="view">
     </form>
   </div>
 </body>
