--- a/src/templates/task_b.html
+++ b/src/templates/task_b.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>{{ passResult['passTitle'] if passResult else "Task B" }}</title>
   <base target="_top">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/task_b_style.css') }}">
 </head>
 <body>
   <!-- b_up -->
@@ -58,9 +59,14 @@
       justify-content: space-between;
       gap: 24px;
     ">
-      <a href="{{ url_for('core.task_c1', fid='back') }}" target="_top" style="color:#0a0000;">Go to other topics</a>
+      <a href="{{ url_for('core.task_c1', fid='back') }}" target="_top" style="color:#0a0000;">
+        Go to Other Topics
+      </a>
       {% if passOrder != 5 %}
-      <a href="{{ url_for('core.task_c1', fid='same') }}" target="_top" style="color:#0a0000;">Continue to the next article</a>
+
+      <a href="{{ url_for('core.task_c1', fid='same') }}" target="_top" style="color:#0a0000;">
+        Read the Next Article
+      </a>
       {% endif %}
     </div>
   </div>
