--- a/src/templates/let_comp_two_inst.html
+++ b/src/templates/let_comp_two_inst.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Instruction for Letter Comparison Two</title>
   <base target="_top">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <style>
+    .cl2 { margin: 20px; padding: 20px; border: 1px solid #ccc; }
+    .cl0 { margin: 20px; }
+  </style>
 </head>
 <body>
   <div class="cl2">
@@ -24,7 +27,7 @@
   <div class="cl0" style="font-size:20pt">
     <form method="get" action="{{ url_for('core.let_comp_two') }}">
       <input type="hidden" name="item" value="1">
-      <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/nextpage_button.gif') }}" alt="Next">
+      <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/view.gif') }}" alt="view">
     </form>
   </div>
 </body>
