--- a/src/templates/practice/prac_c1.html
+++ b/src/templates/practice/prac_c1.html
@@ -5,6 +5,7 @@
   <title>Task C1</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/task_question.css') }}">
 </head>
 <body>
   <div class="b_up">
@@ -18,7 +19,7 @@
       <div id="c1" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>1. How easy was this article to read?</b></p>
+          <p class="question-text"><b>1. How easy was this article to read?</b></p>
           <br><br>
 
           <form id="form_c1" name="form_c1" action="{{ url_for('practice.prac_c1', fid=fid) }}" method="POST" onsubmit="return saveAns();">
@@ -40,7 +41,7 @@
             </table>
             <br>
             <input type="hidden" name="fid" value="{{ fid }}">
-            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next">
+            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/continue_button.gif') }}" alt="continue">
             <input type="hidden" name="qid" value="c1">
           </form>
         </div>
