--- a/src/templates/practice/prac_c2.html
+++ b/src/templates/practice/prac_c2.html
@@ -5,6 +5,7 @@
   <title>Practice C2</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/task_question.css') }}">
 </head>
 <body>
   <div class="b_up">
@@ -16,9 +17,11 @@
       <div id="c2" name="c2" style="text-align:center;">
         <br>
         <div id="passQ" name="passQ" class="passQ">
-          <b>
+          <p class="question-text">
+            <b>
             2. Including the other articles that you have read today, how much new information was in this article?
           </b>
+          </p>
           <br><br>
 
           <form id="form_c2" name="form_c2" action="{{ url_for('practice.prac_c2', fid=fid) }}" method="POST" onsubmit="return saveAns();">
@@ -31,13 +34,13 @@
                 <td colspan="2" style="text-align:center;"><input type="range" name="ans_range" id="ans_range" min="0" max="100" style="width:100%;" onchange="printValue()" /></td>
               </tr>
               <tr>
-                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn’t Learn<br>Anything at All</td>
+                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn't Learn Anything at All</td>
                 <td style="text-align:right; vertical-align:top;"><b>100</b><br>Learned a Lot</td>
               </tr>
             </table>
             <input type="hidden" name="fid" value="{{ fid }}" />
             <br>
-            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next" />
+            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/continue_button.gif') }}" alt="continue" />
           </form>
         </div>
       </div>
