--- a/src/templates/practice/prac_c4.html
+++ b/src/templates/practice/prac_c4.html
@@ -5,6 +5,7 @@
   <title>Practice C4</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/task_question.css') }}">
 </head>
 <body>
   <div class="b_up">
@@ -18,7 +19,9 @@
       <div id="c4" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>4. How much did you learn overall from the practice articles?</b></p>
+          <p class="question-text">
+            <b>4. How much did you learn overall from the practice articles?</b>
+          </p>
           <br><br>
 
           <form id="form_c4" name="form_c4" action="{{ url_for('practice.prac_c4', fid=fid) }}" method="POST" onsubmit="return saveAns();">
@@ -34,14 +37,14 @@
                 </td>
               </tr>
               <tr>
-                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn't Learn<br>Anything at All</td>
+                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn't Learn Anything at All</td>
                 <td style="text-align:right; vertical-align:top;"><b>100</b><br>Learned a Lot</td>
               </tr>
             </table>
             <input type="hidden" name="fid" value="{{ fid }}">
             <input type="hidden" name="savepassid" value="{{ passID }}">
             <br>
-            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next">
+            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/continue_button.gif') }}" alt="continue">
             <input type="hidden" name="qid" value="c4">
           </form>
         </div>
