--- a/src/templates/practice/prac_instruction.html
+++ b/src/templates/practice/prac_instruction.html
@@ -55,18 +55,18 @@
 </head>
 <body>
   <div class='cl2'>
-    <h2><b>Instructions</b></h2>
+    <h2><b>Practice Instructions</b></h2>
     <p style='line-height:130%'>
-    In this study, your task is to learn about some topics in medical science related to animals. There are three main topics, and your goal is to learn as much as you can about them. You will have 4 minutes to learn about animals before I ask you to answer some questions. <b>It is very important for you to pay attention to the articles and do your best to learn about the topics. </b>You will receive bonus money based on your performance.
+      First, you will learn how to do the task in this practice. Your task is to learn about animals. There are articles about three animal-related topics. The goal is to learn as much about animals as possible instead of memorizing the articles word for word. You will have 4 minutes to learn before answering some questions. It is very important for you to pay attention to the articles and do your best to learn from them.  Some animal topics are more difficult than others. You will need to do your best to optimize your learning outcome as a whole within the time limit.
     </p>
     <p style='line-height:130%'>
-    During the learning phase, you will select one topic at a time and read a collection of articles about it. You can read each article at your own pace. After you read each article, you have a choice. You can either continue reading about this topic by pressing the “Read Next article” button OR you can switch to a new topic. You only have 4 minutes to learn about Donations and Medical Transplants, so do your best to <b>concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are <b>either too hard or not helping you to learn anything new, you might want to decide to switch to a new topic</b>.  This is your choice. 
+      During the 4 minutes, you will select one animal topic at a time and read a collection of articles about it. You will see one article at a time, and you can read at your own pace. After you read each article, you have a <b>choice</b>. You can either continue reading about this animal topic by pressing the <b>“Read the Next Article”</b> OR you can switch to a new topic by pressing <b>“Go to Other Topics”</b>. You only have 4 minutes to learn about animals, so <b>do your best to concentrate and stay with a topic only as long as you feel you are still learning something</b>. If the articles in the topic are either too hard or not helping you to learn anything, you might want to decide to switch to a new topic. This is your choice.
     </p>
     <p style='line-height:130%'>
-    Note that there are more articles than you can completely read within 4 minutes so you should make your decisions about <b>whether to continue or stop reading carefully </b>so that you can learn as much information as possible about animals. 
+      Note that there are more articles than you can read fully within 4 minutes so you should make your decisions about whether to continue or stop reading carefully so that you can learn as much information as possible about animals.
     </p>
     <p style='line-height:130%'>
-    After reading each article within a topic, you will be asked to rate how easy the text was, how much new information you thought was in the article, AND how much you learned.  You will be asked to make these ratings on a scale from 0 to 100 by moving the circle: 
+      After reading each article, you will be asked to rate how easy the article was, how much new information you thought was in the article, how much you learned from this article, AND how much you learned from all the articles you read so far today. You will be asked to make these ratings on a scale from 0 to 100 by moving the circle:
     </p>
     <div>
     <table>
@@ -182,10 +182,15 @@
     </table>
     </div>
 
-    <p style='line-height:130%'>Again, after reading each article, you can decide to keep reading about this topic by moving to the next article, or to go back to the main page to choose another topic. Once you decide to leave a topic, you will not be able to return.</p>
-    <p style='line-height:130%'>The goal is to learn as much about animals as possible instead of memorizing the passages word for word. You will need to do your best to <b>optimize your learning outcome</b>.</p>
-    <p style='line-height:130%'>You will be asked to what you have learned at the end of the task. Your performance will be awarded based on the number of facts you learned. Please try your best to learn as much information about “animals” in 4 minutes.</p>
-    <p style='line-height:130%'>First, you will do a practice round, in which your task is to learn about animals in 4 minutes. Please learn as many facts about animals as you can.</p>
+    <p style='line-height:130%'>
+      Again, after reading each article, you can decide to keep reading about this animal topic by moving to the next article, or go back to the main page to choose another animal topic. <b>Once you decide to leave a topic, you will not be able to return.</b>
+    </p>
+    <p style='line-height:130%'>
+      You will be asked what you have learned at the end of the task. Please try your best to learn as much information about “animals” in 4 minutes.
+    </p>
+    <p style='line-height:130%'>
+      When you are ready, please go to the next page by pressing the “Start” button.
+    </p>
     </div>
 
   <div>
