--- a/src/templates/task_c4.html
+++ b/src/templates/task_c4.html
@@ -18,7 +18,9 @@
       <div id="c4" style="text-align:center;">
         <br>
         <div id="passQ" class="passQ">
-          <p><b>4. How much did you learn overall from the articles?</b></p>
+          <p class="question-text">
+            <b>4. How much did you learn overall from the articles?</b>
+          </p>
           <br><br>
           <form id="form_c4" name="form_c4" action="{{ action_url }}" method="POST" onsubmit="return saveAns();">
             <table style="width:100%;">
@@ -50,7 +52,7 @@
               <tr>
                 <td style="text-align:left; vertical-align:top;">
                   <b>0</b><br>
-                  Didn’t Learn Anything at All
+                  Didn't Learn Anything at All
                 </td>
                 <td style="text-align:right; vertical-align:top;">
                   <b>100</b><br>
@@ -60,7 +62,7 @@
             </table>
             <input type="hidden" name="fid" value="{{ fid }}"/>
             <br>
-            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next"/>
+            <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/continue_button.gif') }}" alt="continue"/>
             <input type="hidden" name="qid" value="c4">
           </form>
         </div>
