--- a/src/templates/done.html
+++ b/src/templates/done.html
@@ -12,7 +12,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
       background-color: #f9f9f9;
     }
 
