--- a/src/templates/instruction.html
+++ b/src/templates/instruction.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 20px;
-      font-family: Arial, sans-serif;
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
       max-width: 100%;
       overflow-x: hidden;
     }
