--- a/src/static/css/letter_style.css
+++ b/src/static/css/letter_style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
   margin: 0;
   background-color: #f5f5f5;
 }
@@ -73,7 +73,7 @@ body {
   text-align: center;
 }
 .strings {
-  font-family: 'Courier New', monospace;
+  font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 1.5px;
