--- a/src/static/css/task_b_style.css
+++ b/src/static/css/task_b_style.css
@@ -1,5 +1,5 @@
-body {
-    font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  body {
+    font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
     background-color: #f8fafc;
     color: #222;
     margin: 0;
