--- a/src/static/css/vocab_style.css
+++ b/src/static/css/vocab_style.css
@@ -1,6 +1,6 @@
 /* ====== GLOBAL ====== */
-body {
-    font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  body {
+    font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
     background-color: #f0f0f0;
     color: #333333;
     margin: 0;
